--- a/index.html
+++ b/index.html
@@ -7,3 +7,41 @@
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:400,500" rel="stylesheet">
 </head>
+<body>
+  <header>
+    <h1>Coco's Chocolatier</h1>
+    <nav>
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Location</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+</body>
+<section>
+  <h2>Featured Products</h2>
+  <div class="first">
+    <img class="image" src="images/placeholder-circle.svg" alt="placeholder">
+    <h3>Truffles</h3>
+    <p>With incredible ingredients and a creamy texture, we are happy to say that our collection is made up of more than 50 truffles with continuously new flavours coming up.</p>
+    <a class="btn btn-small" href="#questanderson">Get some</a>
+  </div>
+
+  <div class="second">
+    <img class="image" src="images/placeholder-circle.svg" alt="placeholder">
+    <h3>Hot chocolate</h3>
+    <p>Because humankind has been drinking chocolate for centuries, it would have been silly not to offer our amazing hot chocolates mix. Discover our different varieties.</p>
+    <a class="btn btn-small" href="#dinosaurknights">Get some</a>
+  </div>
+
+  <div class="third">
+    <img class="image" src="images/placeholder-circle.svg" alt="placeholder">
+    <h3>Gifts</h3>
+    <p>What a delightful way to thank or celebrate the people in your life to give great chocolate. We have the perfect chocolate already packaged for gifting for sharing at parties!</p>
+    <a class="btn btn-small" href="#blackdragon">Get some</a>
+  </div>
+</section>
+</body>
+</html>
