Delete some content

--- a/index.html
+++ b/index.html
@@ -25,22 +25,19 @@
   <div class="first">
     <img class="image" src="images/placeholder-circle.svg" alt="placeholder">
     <h3>Truffles</h3>
-    <p>With incredible ingredients and a creamy texture, we are happy to say that our collection is made up of more than 50 truffles with continuously new flavours coming up.</p>
-    <a class="btn btn-small" href="#questanderson">Get some</a>
+    <a class="btn btn-small" href="#questanderson">Learn More</a>
   </div>
 
   <div class="second">
     <img class="image" src="images/placeholder-circle.svg" alt="placeholder">
-    <h3>Hot chocolate</h3>
-    <p>Because humankind has been drinking chocolate for centuries, it would have been silly not to offer our amazing hot chocolates mix. Discover our different varieties.</p>
-    <a class="btn btn-small" href="#dinosaurknights">Get some</a>
+    <h3>Chocolates</h3>
+    <a class="btn btn-small" href="#dinosaurknights">Learn More</a>
   </div>
 
   <div class="third">
     <img class="image" src="images/placeholder-circle.svg" alt="placeholder">
     <h3>Gifts</h3>
-    <p>What a delightful way to thank or celebrate the people in your life to give great chocolate. We have the perfect chocolate already packaged for gifting for sharing at parties!</p>
-    <a class="btn btn-small" href="#blackdragon">Get some</a>
+    <a class="btn btn-small" href="#blackdragon">Learn More</a>
   </div>
 </section>
 </body>
