Add different categories

--- a/index.html
+++ b/index.html
@@ -20,25 +20,70 @@
     </nav>
   </header>
 </body>
-<section>
-  <h2>Featured Products</h2>
+
+<section class="about">
+  <h3>About</h3>
+  <img class="image" src="images/person-circle.svg" alt="person">
+  <p>Coco’s Chocolatier was launched in 2017 and is proud to offer a large variety of organic chocolates made with true ingredients. Our passion for cacao allowed us to create unique high quality products for the big chocolate-lovers. <a>Read more</a></p>
+</section>
+
+<section class="featured-image">
+  <div>
+  <p>Made with passion</p>
+  <p>100% handmade chocolates</p>
+  </div>
+  <img class="image" src="images/placeholder-4by1.svg" alt="image">
+</section>
+
+<section class="featured-products">
+  <h3>Featured Products</h3>
   <div class="first">
     <img class="image" src="images/placeholder-circle.svg" alt="placeholder">
-    <h3>Truffles</h3>
+    <h4>Truffles</h4>
     <a class="btn btn-small" href="#questanderson">Learn More</a>
   </div>
 
   <div class="second">
     <img class="image" src="images/placeholder-circle.svg" alt="placeholder">
-    <h3>Chocolates</h3>
+    <h4>Chocolates</h4>
     <a class="btn btn-small" href="#dinosaurknights">Learn More</a>
   </div>
 
   <div class="third">
     <img class="image" src="images/placeholder-circle.svg" alt="placeholder">
-    <h3>Gifts</h3>
+    <h4>Gifts</h4>
     <a class="btn btn-small" href="#blackdragon">Learn More</a>
   </div>
 </section>
+
+<section class="location">
+  <h3>Location</h3>
+  <div>
+  <img class="image" src="images/placeholder-1by1.svg" alt="location">
+  <p>Come visit us. We are excited to meet you.</p>
+  </div>
+</section>
+
+<section class="contact">
+  <h3>Contact</h3>
+  <div>
+  <img class="image" src="images/placeholder-triangle.svg" alt="triangle">
+  <p>Phone</p>
+  <img class="image" src="images/placeholder-triangle.svg" alt="triangle2">
+  <p>Email</p>
+  </div>
+</section>
+
+<section class="review">
+  <h3>Reviews</h3>
+  <div>
+  <img class="image" src="images/placeholder-triangle.svg" alt="triangle">
+  <p>Phone</p>
+  <img class="image" src="images/placeholder-triangle.svg" alt="triangle2">
+  <p>Email</p>
+  </div>
+</section>
+
+
 </body>
 </html>
