--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
       </ul>
     </nav>
   </header>
-</body>
 
 <section class="about">
   <h3>About</h3>
-  <img class="image" src="images/person-circle.svg" alt="person">
+  <img class="image" src="images/person-square.svg" alt="person">
   <p>Coco’s Chocolatier was launched in 2017 and is proud to offer a large variety of organic chocolates made with true ingredients. Our passion for cacao allowed us to create unique high quality products for the big chocolate-lovers. <a>Read more</a></p>
 </section>
 
@@ -58,32 +57,62 @@
 
 <section class="location">
   <h3>Location</h3>
-  <div>
+  <div class="location-image">
+    <div>
   <img class="image" src="images/placeholder-1by1.svg" alt="location">
-  <p>Come visit us. We are excited to meet you.</p>
+    </div>
+  <p>Come visit us.<br>We are excited to meet you.</br></p>
   </div>
 </section>
 
 <section class="contact">
   <h3>Contact</h3>
   <div>
-  <img class="image" src="images/placeholder-triangle.svg" alt="triangle">
-  <p>Phone</p>
-  <img class="image" src="images/placeholder-triangle.svg" alt="triangle2">
-  <p>Email</p>
+    <div class="contact-btn">
+  <a class="btn btn-ghost btn-small" href="#questanderson">613-123-4567</a>
+  <a class="btn btn-ghost btn-small" href="#questanderson">coco@gmail.com</a>
+    </div>
   </div>
 </section>
 
 <section class="review">
   <h3>Reviews</h3>
-  <div>
-  <img class="image" src="images/placeholder-triangle.svg" alt="triangle">
-  <p>Phone</p>
-  <img class="image" src="images/placeholder-triangle.svg" alt="triangle2">
-  <p>Email</p>
-  </div>
+  <ul class="cards">
+    <li class="card">
+      <div>
+        <div class="card-img">
+          <img src="images/person-circle.svg" alt="placeholder">
+        </div>
+      <div class="content">
+        <h2>Coco Papa</h2>
+        <p>I absolutely love that place, I always go there with my family!</p>
+      </div>
+      </div>
+    </li>
+    <li class="card">
+      <div>
+        <div class="card-img">
+          <img src="images/person-circle.svg" alt="placeholder">
+        </div>
+      <div class="content">
+        <h2>Coco Mama</h2>
+        <p>I have never drunk a hot chocolate as good as the ones from Coco's Chocolatier</p>
+      </div>
+      </div>
+    </li>
+    <li class="card">
+      <div>
+        <div class="card-img">
+          <img src="images/person-circle.svg" alt="placeholder">
+        </div>
+      <div class="content">
+        <h2>Coco Junior</h2>
+        <p>Coco’s Chocolatier has the best chocolates I have ever tried in my life.</p>
+      </div>
+      </div>
+    </li>
+  </ul>
 </section>
-
 
 </body>
 </html>
