--- a/index.html
+++ b/index.html
@@ -114,5 +114,10 @@
   </ul>
 </section>
 
+<section class="footer">
+    <footer>
+          <p>Conception by Laura Meguerditchian</p>
+    </footer>
+</section>
 </body>
 </html>
