Add a link and custom it and add other media queries

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 <section class="about">
   <h3>About</h3>
-  <img class="image" src="images/person-square.svg" alt="person">
-  <p>Coco’s Chocolatier was launched in 2017 and is proud to offer a large variety of organic chocolates made with true ingredients. Our passion for cacao allowed us to create unique high quality products for the big chocolate-lovers. <a>Read more</a></p>
+    <img class="image" src="images/person-square.svg" alt="person">
+    <p>Coco’s Chocolatier was launched in 2017 and is proud to offer a large variety of organic chocolates made with true ingredients. Our passion for cacao allowed us to create unique high quality products for the big chocolate-lovers. <a href="#">Read more.</a></p>
 </section>
 
 <section class="featured-image">
@@ -39,19 +39,19 @@
   <div class="first">
     <img class="image" src="images/placeholder-circle.svg" alt="placeholder">
     <h4>Truffles</h4>
-    <a class="btn btn-small" href="#questanderson">Learn More</a>
+    <a class="btn btn-small" href="#Truffles">Learn More</a>
   </div>
 
   <div class="second">
     <img class="image" src="images/placeholder-circle.svg" alt="placeholder">
     <h4>Chocolates</h4>
-    <a class="btn btn-small" href="#dinosaurknights">Learn More</a>
+    <a class="btn btn-small" href="#Chocolates">Learn More</a>
   </div>
 
   <div class="third">
     <img class="image" src="images/placeholder-circle.svg" alt="placeholder">
     <h4>Gifts</h4>
-    <a class="btn btn-small" href="#blackdragon">Learn More</a>
+    <a class="btn btn-small" href="#Gifts">Learn More</a>
   </div>
 </section>
 
