--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       </ul>
     </nav>
   </header>
+  <section class="main">
+    <main>
   <section class="about">
     <h3>About</h3>
     <img class="image" src="images/person-square.svg" alt="person">
@@ -104,6 +106,8 @@
         </div>
       </li>
     </ul>
+  </section>
+  </main>
   </section>
   <section class="footer">
     <footer>
