Change the headings

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <section class="main">
     <main>
       <section class="about">
-        <h3>About</h3>
+        <h2>About</h2>
         <img class="image" src="images/person-square.svg" alt="person">
         <p>Coco’s Chocolatier was launched in 2017 and is proud to offer a large variety of organic chocolates made with true ingredients. Our passion for cacao allowed us to create unique high quality products for the big chocolate-lovers. <a href="#">Read more.</a></p>
       </section>
@@ -34,25 +34,25 @@
         <img class="image" src="images/placeholder-4by1.svg" alt="image">
       </section>
       <section class="featured-products">
-        <h3>Featured Products</h3>
+        <h2>Featured Products</h2>
         <div class="first">
           <img class="image" src="images/placeholder-circle.svg" alt="placeholder">
-          <h4>Truffles</h4>
+          <h3>Truffles</h3>
           <a class="btn btn-small" href="#Truffles">Learn More</a>
         </div>
         <div class="second">
           <img class="image" src="images/placeholder-circle.svg" alt="placeholder">
-          <h4>Chocolates</h4>
+          <h3>Chocolates</h3>
           <a class="btn btn-small" href="#Chocolates">Learn More</a>
         </div>
         <div class="third">
           <img class="image" src="images/placeholder-circle.svg" alt="placeholder">
-          <h4>Gifts</h4>
+          <h3>Gifts</h3>
           <a class="btn btn-small" href="#Gifts">Learn More</a>
         </div>
       </section>
       <section class="location">
-        <h3>Location</h3>
+        <h2>Location</h2>
         <div class="location-image">
           <div>
             <img class="image" src="images/placeholder-1by1.svg" alt="location">
@@ -61,7 +61,7 @@
         </div>
       </section>
       <section class="contact">
-        <h3>Contact</h3>
+        <h2>Contact</h2>
         <div>
           <div class="contact-btn">
             <a class="btn btn-ghost btn-small" href="#questanderson">613-123-4567</a>
@@ -70,7 +70,7 @@
         </div>
       </section>
       <section class="review">
-        <h3>Reviews</h3>
+        <h2>Reviews</h2>
         <ul class="cards">
           <li class="card">
             <div>
@@ -78,7 +78,7 @@
                 <img src="images/person-circle.svg" alt="placeholder">
               </div>
               <div class="content">
-                <h2>Coco Papa</h2>
+                <p>Coco Papa</p>
                 <p>I absolutely love that place, I always go there with my family!</p>
               </div>
             </div>
@@ -89,7 +89,7 @@
                 <img src="images/person-circle.svg" alt="placeholder">
               </div>
               <div class="content">
-                <h2>Coco Mama</h2>
+                <p>Coco Mama</p>
                 <p>I have never drunk a hot chocolate as good as the ones from Coco's Chocolatier</p>
               </div>
             </div>
@@ -100,7 +100,7 @@
                 <img src="images/person-circle.svg" alt="placeholder">
               </div>
               <div class="content">
-                <h2>Coco Junior</h2>
+                <p>Coco Junior</p>
                 <p>Coco’s Chocolatier has the best chocolates I have ever tried in my life.</p>
               </div>
             </div>
