Change the links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section class="about">
         <h2>About</h2>
         <img class="image" src="images/person-square.svg" alt="person">
-        <p>Coco’s Chocolatier was launched in 2017 and is proud to offer a large variety of organic chocolates made with true ingredients. Our passion for cacao allowed us to create unique high quality products for the big chocolate-lovers. <a href="#">Read more.</a></p>
+        <p>Coco’s Chocolatier was launched in 2017 and is proud to offer a large variety of organic chocolates made with true ingredients. Our passion for cacao allowed us to create unique high quality products for the big chocolate-lovers. <a href=#about>Read more.</a></p>
       </section>
       <section class="featured-image">
         <div>
@@ -64,8 +64,8 @@
         <h2>Contact</h2>
         <div>
           <div class="contact-btn">
-            <a class="btn btn-ghost btn-small" href="#questanderson">613-123-4567</a>
-            <a class="btn btn-ghost btn-small" href="#questanderson">coco@gmail.com</a>
+            <a class="btn btn-ghost btn-small" href="#phonenumber">613-123-4567</a>
+            <a class="btn btn-ghost btn-small" href="#email">coco@gmail.com</a>
           </div>
         </div>
       </section>
