Add quotation marks

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section class="about">
         <h2>About</h2>
         <img class="image" src="images/person-square.svg" alt="person">
-        <p>Coco’s Chocolatier was launched in 2017 and is proud to offer a large variety of organic chocolates made with true ingredients. Our passion for cacao allowed us to create unique high quality products for the big chocolate-lovers. <a href=#about>Read more.</a></p>
+        <p>Coco’s Chocolatier was launched in 2017 and is proud to offer a large variety of organic chocolates made with true ingredients. Our passion for cacao allowed us to create unique high quality products for the big chocolate-lovers. <a href="#about">Read more.</a></p>
       </section>
       <section class="featured-image">
         <div>
