--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Coco Chocolatier</title>
+  <title>Coco's Chocolatiers</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:400,500" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1>Coco's Chocolatier</h1>
+    <h1>Coco's Chocolatiers</h1>
     <nav>
       <ul>
         <li><a href="#">About</a></li>
@@ -24,7 +24,7 @@
       <section class="about">
         <h2>About</h2>
         <img class="image" src="images/person-square.svg" alt="person">
-        <p>Coco’s Chocolatier was launched in 2017 and is proud to offer a large variety of organic chocolates made with true ingredients. Our passion for cacao allowed us to create unique high quality products for the big chocolate-lovers. <a href="#about">Read more.</a></p>
+        <p>Coco’s Chocolatiers was launched in 2017 and is proud to offer a large variety of organic chocolates made with true ingredients. Our passion for cacao allowed us to create unique high quality products for the big chocolate-lovers. <a href="#about">Read more.</a></p>
       </section>
       <section class="featured-image">
         <div>
@@ -90,7 +90,7 @@
               </div>
               <div class="content">
                 <p>Coco Mama</p>
-                <p>I have never drunk a hot chocolate as good as the ones from Coco's Chocolatier</p>
+                <p>I have never drunk a hot chocolate as good as the ones from Coco's Chocolatiers</p>
               </div>
             </div>
           </li>
@@ -101,7 +101,7 @@
               </div>
               <div class="content">
                 <p>Coco Junior</p>
-                <p>Coco’s Chocolatier has the best chocolates I have ever tried in my life.</p>
+                <p>Coco’s Chocolatiers has the best chocolates I have ever tried in my life.</p>
               </div>
             </div>
           </li>
